tinyc/test/bad/struct-as-bool-while.c
struct s
{
    int x;
};

int main()
{
    struct s s;
    while ( s )
        break;
    return 0;
}
